# NVIDIAImageScaling

./: .gitignore  README.md  licence.txt  third_party_licenses.txt
.github/workflows/: ci.yml
NIS/: NIS_Config.h  NIS_Main.glsl  NIS_Main.hlsl  NIS_Scaler.h
samples/: CMakeLists.txt
samples/DX11/: CMakeLists.txt
samples/DX11/include/: AppRenderer.h  BilinearUpscale.h  DXUtilities.h  DeviceResources.h  NVScaler.h  NVSharpen.h  UIRenderer.h
samples/DX11/src/: AppRenderer.cpp  BilinearUpscale.cpp  DeviceResources.cpp  NVScaler.cpp  NVSharpen.cpp  Sample.cpp  UIRenderer.cpp
samples/DX12/include/: AppRenderer.h  BilinearUpscale.h  DXUtilities.h  DeviceResources.h  NVScaler.h  NVSharpen.h  UIRenderer.h
samples/DX12/src/: AppRenderer.cpp  BilinearUpscale.cpp  DeviceResources.cpp  NVScaler.cpp  NVSharpen.cpp  Sample.cpp  UIRenderer.cpp  bilinearUpscale.hlsl
samples/NV12/: CMakeLists.txt
samples/NV12/include/: AppRenderer.h  BilinearUpscale.h  NVScaler.h  NVSharpen.h
samples/NV12/src/: AppRenderer.cpp  BilinearUpscale.cpp  NVScaler.cpp  NVSharpen.cpp  Sample.cpp
samples/Streamline/: CMakeLists.txt
samples/Streamline/include/: AppRenderer.h  SLWrapper.h
samples/Streamline/src/: AppRenderer.cpp  SLWrapper.cpp  Sample.cpp
samples/VK/include/: AppRenderer.h  DeviceResources.h  NVScaler.h  NVSharpen.h  UIRenderer.h  VKUtilities.h
samples/VK/src/: AppRenderer.cpp  DeviceResources.cpp  NVScaler.cpp  NVSharpen.cpp  Sample.cpp  UIRenderer.cpp
samples/common/: Image.cpp  Image.h  Utilities.h
